# FL-Studio-API-Stubs

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: Bug report.md
.github/workflows/: codeql.yml  mkdocs-dryrun.yml  mkdocs.yml  publish.yml  python-app.yml
data/: device_api_scanner.py  fl_stubs.json  transdoc_rules.py
docs/: .pages  general.md  index.md  installation.md  library.md
docs/MIDI Controller Scripting/: .pages
docs/edison_scripting/: index.md
docs/javascript/: removeDunderToc.js
docs/midi_controller_scripting/: .pages  index.md  script_files.md  script_metadata.md
docs/midi_controller_scripting/callbacks/: .pages
docs/midi_controller_scripting/device/: .pages
docs/midi_controller_scripting/fl_classes/: .pages
docs/midi_controller_scripting/general/: .pages
docs/midi_controller_scripting/launchMapPages/: .pages
docs/midi_controller_scripting/midi/: .pages
docs/midi_controller_scripting/midi/__rec_events/: .pages
docs/midi_controller_scripting/plugins/: .pages
docs/midi_controller_scripting/screen/: .pages
docs/midi_controller_scripting/transport/: .pages
docs/midi_controller_scripting/tutorials/: .pages  automatic_script_setup.md  event_mapping.md  getting_started.md  hint_message_icons.md  installing_scripts.md  performance_mode.md  sharing_your_script.md  time_units.md
docs/midi_controller_scripting/utils/: .pages
docs/piano_roll_scripting/: index.md
docs/stylesheets/: extra.css
scripts/: build_docs.py  build_lib.py  check_stubs_against_fl_studio.py  consts.py  generate_pages.py
src/arrangement/: __live.py  __markers.py  __selection.py  __time.py
src/channels/: __notes.py  __properties.py  __sequencer.py  __ui.py
src/device/: __fl.py
src/edison_scripting/enveditor/: __init__.py  __sample.py  __script_dialog.py  __utils.py
src/fl_classes/: __fl_midi_msg.py
src/general/: __undo.py
src/launchMapPages/: __init__.py
src/midi_controller_scripting/arrangement/: __init__.py  __live.py  __markers.py  __time.py
src/midi_controller_scripting/callbacks/: __init__.py
src/midi_controller_scripting/channels/: __init__.py  __notes.py  __properties.py  __sequencer.py  __ui.py
src/midi_controller_scripting/device/: __device.py  __dispatch.py  __fl.py  __init__.py  __util.py
src/midi_controller_scripting/fl_classes/: __init__.py
src/midi_controller_scripting/general/: __fl_state.py  __init__.py  __undo.py
src/midi_controller_scripting/launchMapPages/: __init__.py
src/midi_controller_scripting/midi/: __cc_flags.py  __channel_types.py  __event_editor_modes.py  __ffnep_flags.py  __get_color_flags.py  __get_version_flags.py  __global_transport_flags.py  __gt_commands.py  __init__.py  __linked_info_constants.py  __live_block_status.py  __midi_codes.py  __miscellaneous.py  __mixer_link_channel_mode.py  __mixer_peaks_mode.py  __mixer_setTrackNumber_flags.py  __mixer_solo_flags.py  __on_dirty_channel_flags.py  __on_refresh_flags.py  __overlay_flags.py  __pickup_modes.py  __play_modes.py  __plugin_get_name_flags.py  __pme_flags.py  __project_load_status.py  __scale_indexes.py  __snap_modes.py  __song_tick_modes.py  __song_time.py  __step_params.py  __step_sequencer_loop.py  __track_info_flags.py  __trigger_live_clip_flags.py  __undo_flags.py  __window_indexes.py
src/midi_controller_scripting/midi/__rec_events/: __init__.py  channel_properties.py  global_properties.py  mixer_properties.py  playlist_properties.py  process_flags.py  ranges.py  special.py  ts404.py
src/midi_controller_scripting/mixer/: __eq.py  __events.py  __init__.py  __properties.py  __selection.py  __tracks.py
src/midi_controller_scripting/patterns/: __groups.py  __init__.py  __performance.py  __properties.py
src/midi_controller_scripting/playlist/: __init__.py  __performance.py  __tracks.py
src/midi_controller_scripting/plugins/: __init__.py
src/midi_controller_scripting/screen/: __init__.py
src/midi_controller_scripting/transport/: __init__.py
src/midi_controller_scripting/ui/: __browser.py  __editors.py  __init__.py  __keyboard.py  __navigation.py  __overlays.py  __state.py  __windows.py
src/midi_controller_scripting/utils/: __init__.py
src/mixer/: __properties.py
src/piano_roll_scripting/flpianoroll/: __init__.py  __marker.py  __note.py  __score.py  __script_dialog.py
src/plugins/: __plugins.py
src/transport/: __position.py  __state.py
src/ui/: __editors.py  __fl_state.py  __keyboard.py  __windows.py
