[tool.poetry]
name = "fl-studio-api-stubs"
version = "33.2.0"

description = "Module and function definitions and documentation for the FL Studio Python API"
readme = "README.md"

authors = ["Miguel Guthridge <hdsq@outlook.com.au>"]
license = "LGPL-3.0-only"

repository = "https://github.com/MiguelGuthridge/FL-Studio-Api-Stubs"
documentation = "https://miguelguthridge.github.io/FL-Studio-API-Stubs/"

keywords = [
    "fl-studio",
    "midi",
    "api",
    "documentation",
    "stubs",
    "fl",
    "studio",
    "daw",
    "controller",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
    "Typing :: Stubs Only",
]
include = ["py.typed"]

packages = [
    # MIDI controller scripting
    { include = "arrangement", from = "build_lib" },
    { include = "channels", from = "build_lib" },
    { include = "device", from = "build_lib" },
    { include = "general", from = "build_lib" },
    { include = "launchMapPages", from = "build_lib" },
    { include = "mixer", from = "build_lib" },
    { include = "patterns", from = "build_lib" },
    { include = "playlist", from = "build_lib" },
    { include = "plugins", from = "build_lib" },
    { include = "screen", from = "build_lib" },
    { include = "transport", from = "build_lib" },
    { include = "ui", from = "build_lib" },
    # MIDI controller scripting extra libraries
    { include = "midi", from = "build_lib" },
    { include = "utils", from = "build_lib" },
    # API stubs extra modules
    { include = "fl_classes", from = "build_lib" },
    # Edison scripting
    { include = "enveditor", from = "build_lib" },
    # Piano roll scripting
    { include = "flpianoroll", from = "build_lib" },
]

[tool.poetry.urls]
"Online Documentation" = "https://miguelguthridge.github.io/FL-Studio-API-Stubs/"
"Bug Tracker" = "https://github.com/MiguelGuthridge/FL-Studio-Api-Stubs/issues"


# Primary dependencies
[tool.poetry.dependencies]
python = "^3.10"

# Build dependencies -- required to build the library
[tool.poetry.group.build.dependencies]
transdoc = "^0.2.1"

# Docs depdnencies -- required to build documentation site
# Note build dependencies are also required
[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-gen-files = "^0.4.0"
mkdocs-material = ">=8.5.11,<10.0.0"
mkdocstrings = { version = "^0.20.0", extras = ["python"] }
mkdocs-awesome-pages-plugin = "^2.9.2"

# CI dependencies -- required to run continuous integration, including
# linting, type checking, etc
[tool.poetry.group.ci.dependencies]
coverage = "^7.2.2"
autopep8 = "^2.0.2"
mypy = "^1.1.1"
typing-extensions = "^4.5.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.3"
pytest = "^7.2.2"
flapi = "^1.0.0"

[tool.flake8]
exclude = [
    '.git',
    '__pycache__',
    'old',
    'build',
    'dist',
    'prebuild_docs',
    'build_lib',
]
ignore = ['E501', 'W503']

[tool.mypy]
exclude = ["build/*", "build*/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
